# metadrift-client

./: Makefile  README.md  circle.yml  default.nix  metadrift-client.cabal  shell.nix  stack.yaml
app/: Main.hs
src/Metadrift/: Service.hs
src/Metadrift/Internal/: HmacAuthClient.hs  Service.hs  Utils.hs
src/Metadrift/Internal/Resources/: Card.hs  Secret.hs  Simulate.hs  Support.hs  User.hs
src/Metadrift/Internal/Service/: Card.hs  ProjectedCompletionDates.hs  Secret.hs  Simulate.hs  User.hs
src/Metadrift/Resources/: Card.hs  Secret.hs  Simulate.hs  User.hs
test/: DocTest.hs  HLinter.hs
